<resources>
    <string name="app_name">Мое давление (для докторов)</string>
    <string name="doc_name">Добрый день,\n</string>
    <string name="forgotPass">Забыли пароль?</string>
    <string name="logBut">Войти</string>
    <string name="logoDesc">Logo</string>
    <string name="emailTVLogin">Телефон или почта</string>
    <string name="LoginHeader">Вход</string>
    <string name="passwordTV">Пароль</string>
    <string name="TabPat">Пациенты</string>
    <string name="TabArch">Архив</string>
    <string name="SearchHint">Поиск по пациентам</string>
    <string name="PatName">Patient Name</string>
    <string name="PatPhone">89997776622</string>
    <string name="cureDate">Начало лечения: </string>
    <string name="noData">—</string>
    <string name="logoutButtonLabel">Выйти</string>
    <string name="PatientActivityLabel">Пациент</string>
    <string name="ChronologyActivityLabel">Хронология</string>
    <string name="FirstTabLabel">Информация</string>
    <string name="SecondTabLabel">Хронология</string>
    <string name="patientNameLabel">[Имя пациента]</string>
    <string name="patientPhoneNumber">[Номер телефона]</string>
    <string name="cureDateLabel">Начало лечения:</string>
    <string name="paramsLabelString">Рост:\nВес:\nТонометр:</string>
    <string name="DateRange">—</string>
    <string name="GraphLabel">График замеров</string>
    <string name="TodayCardsLabel">За сегодня</string>
    <string name="onWeekLabel">За неделю</string>
    <string name="archiveButtonLabel">Заархивировать</string>
    <string name="chronoButtonLabel">Хронология</string>
    <string name="newTreatButtonLabel">Скорректировать лечение</string>
    <string name="chronoCardDate">Дата записи</string>
    <string name="treatmentCardLabel">Лечение</string>
    <string name="newTreatActivityLabel">Скорректировать лечение</string>
    <string name="attachedTreatmentLabel">Назначенное лечение</string>
    <string name="sendString">Отправить</string>
    <string name="enterNewTreatment">Введите текст для пациента...</string>
    <string name="archlabel">Пациент в архиве</string>
    <string name="unarchiveLabel">Разархивировать</string>
</resources>