<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArchivedPatientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="409dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/backView"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="11dp"
            android:layout_height="18.5dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/backView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backView"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/textView3"
            style="@style/heading_3_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/archlabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="54dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintCard"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edittext_border"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/patientNameLabel"
                    style="@style/heading_3_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/patientNameLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/patientPhoneLabel"
                    style="@style/small_blue_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/patientPhoneNumber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patientNameLabel" />

                <TextView
                    android:id="@+id/cureDateLabel"
                    style="@style/dateCuring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cureDateLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patientPhoneLabel" />

                <TextView
                    android:id="@+id/parametresLabel"
                    style="@style/dateCuring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/paramsLabelString"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cureDateLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintGraph"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_border"
                android:paddingBottom="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintCard">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/heading_3_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    android:text="@string/GraphLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/measurement" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout18"
                    android:layout_width="312dp"
                    android:layout_height="215dp"
                    android:layout_marginTop="64dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/LineChart"
                        android:layout_width="match_parent"
                        android:layout_height="163dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/beginDateET"
                        android:layout_width="140.5dp"
                        android:layout_height="32dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/edittext_border"
                        android:clickable="false"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:textColor="#1D1D1D"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/endDateET"
                        android:layout_width="140.5dp"
                        android:layout_height="32dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/edittext_border"
                        android:clickable="false"
                        android:ems="10"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:textColor="#1D1D1D"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="9dp"
                        android:layout_height="15dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/inter"
                        android:gravity="top|center_horizontal"
                        android:text="@string/DateRange"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/endDateET"
                        app:layout_constraintStart_toEndOf="@+id/beginDateET" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView22"
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/TodayCardsLabel"
                    android:translationY="-0.6sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout18" />

                <TextView
                    android:id="@+id/textView23"
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/onWeekLabel"
                    android:translationY="-0.6sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvToday" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvToday"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.483"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvWeek"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.483"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/treatmentChronoButton"
                style="@style/blue_button_label"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_blue"
                android:text="@string/chronoButtonLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintGraph" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/archiveButton"
                style="@style/white_button_label"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_white"
                android:text="@string/unarchiveLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treatmentChronoButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>